force-app/main/default/objects/Customer_Banking__c/Customer_Banking__c.object-meta.xml
<CustomObject>
    <label>Customer Banking</label>
    <nameField>
        <label>Customer Banking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>