force-app/main/default/objects/Customer_Banking__c/fields/Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Number__c</fullName>
    <description>Aadhar card number</description>
    <label>Aadhar</label>
    <length>12</length>
    <type>Text</type>
</CustomField>