force-app/main/default/objects/Customer_Banking__c/fields/Customer_Banking_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Banking_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Banking Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>