force-app/main/default/objects/Customer_Banking__c/fields/Customer_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_c__c</fullName>
    <label>Customer_Type__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>