force-app/main/default/objects/Customer_Banking__c/fields/High_Net_Worth_Flag__c.field-meta.xml
<CustomField>
    <fullName>High_Net_Worth_Flag__c</fullName>
    <formula>Annual_Income__c &gt; 2000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Net Worth Flag</label>
    <type>Checkbox</type>
</CustomField>