force-app/main/default/objects/Customer_Banking__c/fields/PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_Number__c</fullName>
    <description>PAN card number</description>
    <label>PAN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>