force-app/main/default/objects/Customer_Banking__c/validationRules/Blacklisted_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Blacklisted_Customer</fullName>
    <active>true</active>
    <description>Blacklisted customer cannot be taken.</description>
    <errorConditionFormula>Blacklist__c</errorConditionFormula>
    <errorMessage>Loan application cannot be created for Blacklisted Customer</errorMessage>
</ValidationRule>