force-app/main/default/objects/Customer_Banking__c/validationRules/Customer_Age_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Age_Check</fullName>
    <active>true</active>
    <description>Customer should be above 18 years old</description>
    <errorConditionFormula>Date_of_Birth__c &gt; TODAY() - 6570</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Customer should be 18 years old</errorMessage>
</ValidationRule>