force-app/main/default/objects/Customer_Banking__c/listViews/Compliance_Review_Customer_Banking.listView-meta.xml
<ListView>
    <fullName>Compliance_Review_Customer_Banking</fullName>
    <filterScope>Queue</filterScope>
    <label>Compliance Review</label>
    <queue>Compliance_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>