force-app/main/default/objects/Customer_Banking__c/listViews/New_Applications_Customer_Banking.listView-meta.xml
<ListView>
    <fullName>New_Applications_Customer_Banking</fullName>
    <filterScope>Queue</filterScope>
    <label>New Applications</label>
    <queue>New_Applications</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>