force-app/main/default/objects/Customer_Banking__c/listViews/Underwriting_Customer_Banking.listView-meta.xml
<ListView>
    <fullName>Underwriting_Customer_Banking</fullName>
    <filterScope>Queue</filterScope>
    <label>Underwriting</label>
    <queue>Underwriting</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>